--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,4 @@
-
+ticket_log.txt
 .env
-
-
-*.gem
-*.rbc
-/.config
-/coverage/
-/InstalledFiles
-/pkg/
-/spec/reports/
-/test/tmp/
-/test/version_tmp/
-/tmp/
-/log/
-/vendor/bundle/
-/.bundle/
-/node_modules/
-*/log
-
-.DS_Store
-Thumbs.db
-
-run_track_tickets.sh
-
 chromedriver
-
-cron_log.txt
+.claude/
